cohortAttend/force-app/main/default/objects/Worshipper__c/Worshipper__c.object-meta.xml
<CustomObject>
    <description>Contact worship attendance</description>
    <label>Worshipper</label>
    <nameField>
        <displayFormat>W-{0000}</displayFormat>
        <label>Worshipper Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Worshippers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>