cohortAttend/force-app/main/default/objects/Worshipper__c/fields/Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Worshippers</relationshipLabel>
    <relationshipName>Worshippers</relationshipName>
    <type>Lookup</type>
</CustomField>