cohortAttend/force-app/main/default/objects/Worshipper__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <inlineHelpText>Text field for Contact Name.</inlineHelpText>
    <label>Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>