cohortAttend/force-app/main/default/objects/Worshipper__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <inlineHelpText>Date attended worship</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>